# osmflat-rs

./: .gitignore  Cargo.toml  README.md  build.rs  default.toml  notes.txt  rustfmt.toml
.github/workflows/: ci.yaml
examples/: cities.rs  count.rs  debug.rs  pub_names.rs  pub_names_manual_opt.rs  render-svg.rs  render.rs  rendering-scaffold.rs  road_length.rs  roads2png.rs  svg.rs
examples/cpp/: Makefile  pub_names.cpp
flatdata/: osm.flatdata
osmflat/: Cargo.toml  recompile.sh
osmflat/examples/: README.md  cities.rs  count.rs  debug.rs  pub-names.rs  pub_names.rs  read.rs  render-features.rs  render-roads.rs  render-svg.rs  road-length.rs  road_length.rs  roads2png.rs  sort_hilbert.rs
osmflat/examples/cpp/: osm_generated.h  pub_names.cpp
osmflat/src/: exp_gen.rs  lib.rs  osmflat.rs  osmflat_generated.rs  tags.rs
osmflatc/: Cargo.toml
osmflatc/src/: args.rs  ids.rs  main.rs  osmpbf.rs  parallel.rs  strings.rs
src/: args.rs  ids.rs  lib.rs  main.rs  osmflat.rs  osmflat_generated.rs  osmpbf.rs  parallel.rs  stats.rs  strings.rs
src/flatdata/: osm.flatdata
