[package]
name = "osmflat"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
description = "Flat OpenStreetMap (OSM) data format with very efficient random access pattern through memory mapped files."
repository = "https://github.com/boxdot/osmflat-rs"
keywords = ["serialization", "osm", "openstreetmap", "flatdata"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.2"
bytes = "0.4"
colored = "1.6"
failure = "0.1"
flatdata = { git = "https://github.com/boxdot/flatdata-rs", rev = "df86fda4" }
flate2 = "1.0"
itertools = "0.7"
log = "0.4"
pbr = "1.0"
prost = "0.3"
prost-derive = "0.3"
prost-types = "0.3"
stderrlog = "0.4"
structopt = "0.2"
rayon = "1.0.3"

[build-dependencies]
prost-build = "0.3"

[dev-dependencies]
bresenham = "0.1"
png = "0.13"
proptest = "0.6.0"
smallvec = "0.6"
svg = "0.5"
serde = { version = '1', features = ['derive'] }
serde_json = "1"

[[bin]]
name = "osmflatc"
path = "src/main.rs"
