[package]
name = "osmflat"
version = "0.1.0"
authors = [
    "boxdot <d@zerovolt.org>",
    "Christian Vetter <veaac.fdirct@gmail.com>",
    "Gabriel Féron <feron.gabriel@gmail.com>"
]
license = "MIT/Apache-2.0"
description = "OpenStreetMap (OSM) data format providing an efficient random data access through memory mapped files."
repository = "https://github.com/boxdot/osmflat-rs"
keywords = ["serialization", "osm", "openstreetmap", "flatdata"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
flatdata = "0.5.1"

[dev-dependencies]
itertools = "0.9.0"
png = "0.16.7"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
smallvec = "1.4.2"
structopt = "0.3.20"
svg = "0.8.0"
