[package]
name = "osmflat"
version = "0.1.0"
authors = [
    "boxdot <d@zerovolt.org>",
    "Christian Vetter <veaac.fdirct@gmail.com>",
    "Gabriel Féron <feron.gabriel@gmail.com>"
]
license = "MIT/Apache-2.0"
description = "OpenStreetMap (OSM) data format providing an efficient random data access through memory mapped files."
repository = "https://github.com/boxdot/osmflat-rs"
keywords = ["serialization", "osm", "openstreetmap", "flatdata"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
fast_hilbert = "1.0.1"
flatdata = "0.5.2"
memmap2 = "0.5.7"

[dev-dependencies]
clap = { version = "3.2.17", features = ["derive"] }
itertools = "0.10.3"
png = "0.17.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
smallvec = "1.4.2"
svg = "0.10.0"

[features]
default = []
tar = ["flatdata/tar"]
