[package]
name = "osmflat"
version = "0.3.1"
authors = [
    "boxdot <d@zerovolt.org>",
    "Christian Vetter <veaac.fdirct@gmail.com>",
    "Gabriel Féron <feron.gabriel@gmail.com>"
]
license = "MIT/Apache-2.0"
description = "OpenStreetMap (OSM) data format providing an efficient random data access through memory mapped files."
repository = "https://github.com/boxdot/osmflat-rs"
keywords = ["serialization", "osm", "openstreetmap", "flatdata"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"

[dependencies]
flatdata = "0.5.3"

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.13.0"
png = "0.17.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
smallvec = "1.10.0"
svg = "0.17.0"

[features]
default = []
tar = ["flatdata/tar"]
