[package]
name = "osmflatc"
version = "0.1.0"
authors = [
    "boxdot <d@zerovolt.org>",
    "Christian Vetter <veaac.fdirct@gmail.com>",
    "Gabriel Féron <feron.gabriel@gmail.com>"
]
license = "MIT/Apache-2.0"
description = "Compiler of OpenStreetMap (OSM) Data from osm.pbf format to osm.flatdata format"
repository = "https://github.com/boxdot/osmflat-rs"
keywords = ["serialization", "osm", "openstreetmap", "flatdata"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3.4"
bytes = "0.5.4"
colored = "1.9.3"
crossbeam = "0.7.3"
env_logger = "0.7.1"
flatdata = { git = "https://github.com/heremaps/flatdata", rev = "71a2e93" }
flate2 = "1.0.13"
inlinable_string = "0.1.11"
itertools = "0.8.2"
log = "0.4.8"
memmap = "0.7.0"
osmflat = "0.1.0"
parking_lot = "0.10.0"
pbr = "1.0.2"
prost = "0.6.1"
prost-derive = "0.6.1"
prost-types = "0.6.1"
rayon = "1.3.0"
structopt = "0.3.9"

[build-dependencies]
prost-build = "0.6.1"

[dev-dependencies]
proptest = "0.9.5"
