[package]
name = "osmflatc"
version = "0.1.0"
authors = [
    "boxdot <d@zerovolt.org>",
    "Christian Vetter <veaac.fdirct@gmail.com>",
    "Gabriel Féron <feron.gabriel@gmail.com>"
]
license = "MIT/Apache-2.0"
description = "Compiler of OpenStreetMap (OSM) Data from osm.pbf format to osm.flatdata format"
repository = "https://github.com/boxdot/osmflat-rs"
keywords = ["serialization", "osm", "openstreetmap", "flatdata"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3.4"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
crossbeam = "0.8.0"
env_logger = "0.8.1"
fast_hilbert = "1.0.1"
flatdata = "0.5.3"
flate2 = "1.0.18"
inlinable_string = "0.1.11"
itertools = "0.10.3"
log = "0.4.11"
memmap2 = "0.5.7"
osmflat = "0.1.0"
parking_lot = "0.11.0"
pbr = "1.0.3"
prost = "0.11.0"
prost-derive = "0.11.0"
prost-types = "0.11.1"
rayon = "1.4.1"

[build-dependencies]
prost-build = "0.11.1"

[dev-dependencies]
proptest = "0.10.1"
